Disenio de pantallas de administracion y creacion de pantalla de administracion de ordenes

--- a/vista/css/estilo.css
+++ b/vista/css/estilo.css
@@ -1139,3 +1139,8 @@ footer ul.payment li span::before {
   right: 0;
   top: 0;
 }
+
+.logo-style-admin {
+  padding-top: 10px;
+  font-size: x-large;
+}
